--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ exclude = ["docs", ".idea"]
 
 [dependencies]
 log = "0.4"
+pod = { git = "https://github.com/jinzhao-dev/POD", rev = "7fa2ed2" }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 x86_64 = "0.14.8"
